src/objects/tdc_tua__Setup__c.object
<CustomObject>
    <description>Record Storage of Unsubscription page</description>
    <fields>
        <fullName>tdc_tua__App_Logo_URL__c</fullName>
        <label>App Logo URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Body_Font_Family__c</fullName>
        <label>Body Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Content_Background_Color__c</fullName>
        <label>Content Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Content_Font_Size__c</fullName>
        <label>Content Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Content_Text_Color__c</fullName>
        <label>Content Text Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Background_Color__c</fullName>
        <label>Feedback Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Button_Background_Color__c</fullName>
        <label>Feedback Button Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Button_Font_Color__c</fullName>
        <label>Feedback Button Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Button_Font_Size__c</fullName>
        <label>Feedback Button Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Button_Text__c</fullName>
        <label>Feedback Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Heading_Font_Color__c</fullName>
        <label>Feedback Heading Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Heading_Font_Size__c</fullName>
        <label>Feedback Heading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Heading_Text__c</fullName>
        <label>Feedback Heading Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Subheading_Font_Color__c</fullName>
        <label>Feedback Subheading Font Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Subheading_Font_Size__c</fullName>
        <label>Feedback Subheading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback_Subheading_Text__c</fullName>
        <label>Feedback Subheading Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Footer_Background_Color__c</fullName>
        <label>Footer Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Footer_Color__c</fullName>
        <label>Footer Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Footer_Content__c</fullName>
        <label>Footer Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Footer_Font_Color__c</fullName>
        <label>Footer Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Footer_Font_Size__c</fullName>
        <label>Footer Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Background_Color__c</fullName>
        <description>Background Color Of Header</description>
        <label>Header Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Button_Background_Color__c</fullName>
        <label>Header Button Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Button_Font_Color__c</fullName>
        <label>Header Button Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Button_Font_Size__c</fullName>
        <label>Header Button Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Button_Link__c</fullName>
        <label>Header Button Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Button_Text__c</fullName>
        <label>Header Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Font_Size__c</fullName>
        <label>Header Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Title_Color__c</fullName>
        <label>Header Title Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Header_Title__c</fullName>
        <label>Header Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Is_Feedback_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Feedback Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Other_Reason_For_Unsubscription__c</fullName>
        <label>Other Reason For Unsubscription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Page_Background_Color__c</fullName>
        <description>Background Color Of Page</description>
        <label>Page Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Page_Title_Color__c</fullName>
        <label>Page Title Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Page_Title_Font_Size__c</fullName>
        <label>Page Title Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Page_Title__c</fullName>
        <label>Page Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Reason_For_Unsubscribe__c</fullName>
        <inlineHelpText>Please fill the values in Comma Seperated form</inlineHelpText>
        <label>Reason For Unsubscribe</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Background_Color__c</fullName>
        <label>Resubscribe Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Button_Color__c</fullName>
        <label>Resubscribe Button Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Font_Color__c</fullName>
        <label>Resubscribe Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Font_Size__c</fullName>
        <label>Resubscribe Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Heading_Font_Color__c</fullName>
        <label>Resubscribe Heading Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Heading_Font_Size__c</fullName>
        <label>Resubscribe Heading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Heading_Text__c</fullName>
        <label>Resubscribe Heading Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Subheading_Font_Color__c</fullName>
        <label>Resubscribe Subheading Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Subheading_Font_Size__c</fullName>
        <label>Resubscribe Subheading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_Subheading_Text__c</fullName>
        <label>Resubscribe Subheading Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Resubscribe_button_Text__c</fullName>
        <label>Resubscribe button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Title_Font_Family__c</fullName>
        <label>Title Font Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Background_Color__c</fullName>
        <label>Unsubscribe Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Button_Color__c</fullName>
        <label>Unsubscribe Button Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Button_Text__c</fullName>
        <label>Unsubscribe Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Font_Color__c</fullName>
        <label>Unsubscribe Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Font_Size__c</fullName>
        <label>Unsubscribe Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Heading_Text__c</fullName>
        <label>Unsubscribe Heading Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Subheading_Font_Color__c</fullName>
        <label>Unsubscribe Subheading Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Subheading_Font_Size__c</fullName>
        <label>Unsubscribe Subheading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_Subheading_Text__c</fullName>
        <label>Unsubscribe Subheading Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_heading_Font_Color__c</fullName>
        <label>Unsubscribe heading Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tua__Unsubscribe_heading_Font_Size__c</fullName>
        <label>Unsubscribe heading Font Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Setup</label>
    <listViews>
        <fullName>tdc_tua__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>